--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
     overflow-x: hidden;
 }
-
 section {
     clear: both;
 }
@@ -336,10 +335,12 @@ section {
     position: absolute;
     top: 0;
     padding-top: 205px;
-    padding-left: 50px;
+    padding-left: 120px;
     line-height: 1.1;
 }
 .verticaly h2 {
+    font-family: "Tw Cen MT Condensed";
+    font-weight: 600;
     text-transform: uppercase;
     font-size: 80px;
     text-align: center;
